# starstream

./: .sesskey  CHANGELOG.md  CHANGES.md  CONTRIBUTING.md  LICENSE  LORO_INTEGRATION.md  README.md  SKILL.md  STATUS.md  STRUCTURE.md  pyproject.toml  pytest.ini
.github/: FUNDING.yml
.investigation/: broadcast-investigation-2025-03-08.md
docs/plans/: 2025-03-07-sse-broadcast-implementation-plan.md  2025-03-07-sse-broadcast-integration-design.md  2025-03-08-unified-broadcast-api.md
examples/: basic.py  custom.py  rooms.py
skills/starstream/: REFERENCE.md  SKILL.md
starstream/: __init__.py  cli.py  conventions.py  helpers.py  plugin.py  presence.py  tracker.py
starstream-loro/: README.md  STATUS.md  pyproject.toml
starstream-loro/examples/: collaborative_editor.py
starstream-loro/starstream_loro/: __init__.py  storage.py  sync.py
starstream-loro/tests/: test_integration_loro.py
starstream-pocketbase/: README.md  STATUS.md  pyproject.toml
starstream-pocketbase/starstream_pocketbase/: storage.py  sync.py
starstream/storage/: __init__.py  base.py
tests/: test_conventions.py  test_helpers.py  test_history.py  test_integration.py  test_multi_topic.py  test_presence.py
