[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "starstream-loro"
version = "0.1.0"
description = "Loro CRDT integration for StarStream - Conflict-free collaborative editing"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Cali", email = "cali@example.com"}
]
keywords = [
    "starstream",
    "starhtml",
    "loro",
    "crdt",
    "collaborative",
    "realtime",
    "sync"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
]
dependencies = [
    "starstream>=0.1.0",
    "loro>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/anomalyco/starstream-loro"
Repository = "https://github.com/anomalyco/starstream-loro"
Issues = "https://github.com/anomalyco/starstream-loro/issues"

[tool.hatch.build.targets.wheel]
packages = ["starstream_loro"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
